# sensing-dev-installer

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  README.md
.github/workflows/: Release-MSVC.yml  Release-linux.yml  Release-version-info.yml  Release.yml  Test-Release.yml  TestInstallerScript.yml  build-opencv.yml  develop-Linux.yml  develop-MSVC.yml  develop-Windows.yml  develop-linux.yml  install-sensing-dev.yml
installer/: CMakeLists.txt  Version.h.in  config.yml
installer/cmake/: CPackConfig.cmake  InstallerNSISInclude.nsh  PostInstallScript.cmake.in  conan.cmake
installer/license/: LICENSE  thirdparty_notice.rtf  thirdparty_notice.txt
installer/scripts/: build-Aravis.ps1  build-Pygobject.ps1  conanfile.py  get_component_version.py
installer/src/: generate_config.py  installer.cpp
installer/testcases/cpp/aravis_test/: CMAKELists.txt  aravis_test.cpp
installer/testcases/cpp/gendc_test/: CMAKELists.txt  gendc_test.cpp
installer/testcases/cpp/ionkit_test/: CMAKELists.txt  ionkit_test.cpp
installer/testcases/cpp/ionkit_test_old/: CMAKELists.txt  ionkit_test_old.cpp
installer/testcases/cpp/opencv_test/: CMAKELists.txt  opencv_test.cpp
installer/testcases/cpp/opencv_test_v240104/: CMAKELists.txt
installer/testcases/python/: aravis_test.py  arv-fake-camera.xml  gendc_test.py  ionkit_contrib_test.py  ionkit_test.py  opencv.py  opencv_gst_test.py  requirements-v23.11.01.txt  requirements-v24.01.01.txt  requirements-v24.01.03.txt  requirements-v24.01.04.txt
installer/tools/: Env.ps1  Install-USBDeviceDriver.ps1  Installer-WinUSB.ps1  dup_installer.ps1  installer-WinUSB.ps1  installer.ps1  opencv_python_installer.ps1  pygobject_installer.ps1  setup.sh  test.ps1  uninstaller.ps1
installer/tools/build_support/: parse_config.py
